<resources>
    <string name="app_name" translatable="false">Demo SQLite</string>

    <string name="name">Nama</string>
    <string name="ttl">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="male">Laki-laki</string>
    <string name="female">Perempuan</string>
    <string name="address">Alamat</string>

    <string name="save">Save</string>

    <string name="prompt_1">Data Disimpan</string>
    <string name="prompt_2">Data Dihapus</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />
</resources>
